--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>MCA Box</title>
+    <title>BCA Box</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/images/study-icon.png" type="image/png">
@@ -28,16 +28,16 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand mx-auto text-center">
-          NIT Kurukshetra
-        <br>MCA Box
+         R.R.P.G. Amethi
+        <br>BCA Box
       </a>
     </nav>
 
     <div class="container-fluid bg-dark">
         <div class="jumbotron">
             <div class="container">
-                <h1>Welcome to MCA Box!</h1>
-                <p class="lead">Tired of cluttered study resources? Or Worried about placements? MCA Box is here to help you. <br> MCA Box is your virtual classroom. Its goal is to provide you all the resources you need during your MCA at NIT Kurukshetra. So, you'll
+                <h1>Welcome to BCA Box!</h1>
+                <p class="lead">Tired of cluttered study resources? Or Worried about placements? BCA Box is here to help you. <br> BCA Box is your virtual classroom. Its goal is to provide you all the resources you need during your BCA at R.R.P.G. Amethi. So, you'll
                     get everything at one place, organised and updated.</p>
                 <p class="lead"><q>Power is gained by sharing knowledge, not by hoarding it.</q> </p>
             </div>
