--- a/index.html
+++ b/index.html
@@ -84,6 +84,42 @@
                     </div>
                 </div>
             </div>
+                     <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card w-100">
+                        <div class="card-top">
+                            <h1 class="text-center">
+                                1<sup>st</sup> Semester
+                            </h1>
+                        </div>
+                        <div class="card-body">
+                            <a href="/mca-box/sem1.htm" class="btn btn-primary w-100">Enter <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card w-100">
+                        <div class="card-top">
+                            <h1 class="text-center">
+                                2<sup>nd</sup> Semester
+                            </h1>
+                        </div>
+                        <div class="card-body">
+                            <a href="/mca-box/sem2.htm" class="btn btn-primary w-100">Enter <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4 d-flex align-items-stretch">
+                    <div class="card w-100">
+                        <div class="card-top">
+                            <h1 class="text-center">
+                                3<sup>rd</sup> Semester
+                            </h1>
+                        </div>
+                        <div class="card-body">
+                            <a href="/mca-box/sem3.htm" class="btn btn-primary w-100">Enter <i class="fa fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
         </div>
         <hr>
 
@@ -143,7 +179,7 @@
             <p class="text-white">Not a big deal. You can always request any specific resource you need, we'll add it for you. Also, you can gift us some amazing resource that you've got.</p>
             <a href="extra/request.htm" class="btn btn-info mt-2">Request Resources <i class="fa fa-arrow-right"></i></a>
             <a href="extra/gift.htm" class="btn btn-info mt-2">Gift Resources <i class="fa fa-arrow-right"></i></a>
-            <p class="text-danger">You must be logged in with your NIT Kurukshetra Email ID to access these services.</p>
+            <p class="text-danger">You must be logged in with your R.R.P.G. Amethi Email ID to access these services.</p>
             <!-- </div> -->
         </div>
     </div>
@@ -153,12 +189,12 @@
         <h1 class="text-white">Announcements</h1>
         <br>
         <p class="text-white">
-            Hey! Shahnawaz this side. I'm happy to have you here. If you want to contribute to MCA BOX in order to make it <b>BIG</b> & <b>BETTER</b>, you're just a text/call away from getting into our <a href="extra/contributors.htm"><b>Contributors' List</b></a>
+            Hey! Satyendra this side. I'm happy to have you here. If you want to contribute to BCA BOX in order to make it <b>BIG</b> & <b>BETTER</b>, you're just a text/call away from getting into our <a href="extra/contributors.htm"><b>Contributors' List</b></a>
         </p>
     </div>
 
     <footer class="footer mt-auto">
-        <p>Designed with ❤️ by <a href="https://yoursshahnawaz.github.io/" target="_blank" class="text-info">Shahnawaz</a></p>
+        <p>Designed with ❤️ by <a href="https://yoursshahnawaz.github.io/" target="_blank" class="text-info">Satyendra</a></p>
     </footer>
 
     <script src="assets/js/script.js"></script>
