--- a/index.html
+++ b/index.html
@@ -84,7 +84,11 @@
                     </div>
                 </div>
             </div>
-                     <div class="col-sm-4 d-flex align-items-stretch">
+                    
+        </div>
+
+  <div class="row">
+                <div class="col-sm-4 d-flex align-items-stretch">
                     <div class="card w-100">
                         <div class="card-top">
                             <h1 class="text-center">
@@ -120,7 +124,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+                    
         </div>
+
+
         <hr>
 
         <div class="container">
@@ -194,7 +202,7 @@
     </div>
 
     <footer class="footer mt-auto">
-        <p>Designed with ❤️ by <a href="https://yoursshahnawaz.github.io/" target="_blank" class="text-info">Satyendra</a></p>
+        <p>Designed with ❤️ by <a href="#" target="_blank" class="text-info">Satyendra</a></p>
     </footer>
 
     <script src="assets/js/script.js"></script>
