--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <h1 class="text-white">Announcements</h1>
         <br>
         <p class="text-white">
-            Hey! Satyendra this side. I'm happy to have you here. If you want to contribute to BCA BOX in order to make it <b>BIG</b> & <b>BETTER</b>, you're just a text/call away from getting into our <a href="extra/contributors.htm"><b>Contributors' List</b></a>
+            Hey! Satyendra this side. I'm happy to have you here. If you want to contribute to BCA BOX in order to make it <b>BIG</b> & <b>BETTER</b>, you're just a text/call away from getting into our <a href="https://satyendramaurya87.github.io/portfolio/"><b>Contributors' List</b></a>
         </p>
     </div>
 
